# OOP_3Laba

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GeometryProject  Makefile  cmake_install.cmake  gtest_exe  main.cpp
include/: figure.h  point.h  rectangle.h  square.h  triangle.h
src/: point.cpp  rectangle.cpp  square.cpp  triangle.cpp
test/: test.cpp
